<resources>
    <string name="app_name">MD Postres</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imgDescription">Imagen del producto</string>
    <string name="hintTvProduct">Nombre del producto</string>
    <string name="add_product">Añadir</string>
    <string name="name_product_hint">Nombre del producto</string>
    <string name="car_back">Atrás</string>
    <string name="car_sum">Total = S/%1$.2f</string>
    <string name="message_confirm">Supedido llegará pronto, gracias por su compra</string>
    <string name="status_message">!Pago exitoso¡</string>

    <string name="car_pay">Pagar</string>
    <string name="confirmation_title">Pago</string>
    <string name="car_title">Carrito de compras</string>
    <string name="product_list">Pedido:</string>
    <string name="product_title">Productos</string>
    <string name="text_done">Listo</string>
    <string name="confirmation_title_alt">Pago(by id)</string>
    <string name="exitMessage">¿Salir de la aplicación?</string>
    <string name="exitAction">Salir</string>
</resources>