<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/productFragment">

    <fragment
        android:id="@+id/productFragment"
        android:name="com.barryzeha.mdpostres.ProductFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_product" >
        <action
            android:id="@+id/action_product_to_car"
            app:destination="@id/carFragment"/>
     <!--   <action
            android:id="@+id/action_product_to_car"
            app:destination="@id/carFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/slide_out" />-->
    </fragment>
    <fragment
        android:id="@+id/carFragment"
        android:name="com.barryzeha.mdpostres.CarFragment"
        android:label="@string/car_title"
        tools:layout="@layout/fragment_car" >
        <action
            android:id="@+id/action_car_to_product"
            app:destination="@id/productFragment"/>
       <!-- <action
            android:id="@+id/action_car_to_product"
            app:destination="@id/productFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right" />-->
        <argument
            android:name="products_args"
            app:argType="string[]"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_car_to_confirmation"
            app:destination="@id/confirmationFragment" />
    </fragment>
    <fragment
        android:id="@+id/confirmationFragment"
        android:name="com.barryzeha.mdpostres.ConfirmationFragment"
        android:label="@string/confirmation_title"
        tools:layout="@layout/fragment_confirmation" >
        <action
            android:id="@+id/action_confirmation_to_product"
            app:destination="@id/productFragment" />
    </fragment>
    <action android:id="@+id/action_global_confirmation"
    app:destination="@id/confirmationFragment" />
</navigation>