<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ConfirmationFragment">
<androidx.constraintlayout.widget.Guideline
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:id="@+id/guidelinePay"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.5"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvMessage"
        android:text="@string/message_confirm"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_marginEnd="@dimen/common_padding_large"
        android:layout_marginStart="@dimen/common_padding_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guidelinePay"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvStatus"
        android:text="@string/status_message"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:layout_marginBottom="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvMessage"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_padding_min"
        android:src="@drawable/ic_check"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvStatus"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnDone"

        android:layout_marginBottom="@dimen/common_padding_default"
        app:icon="@drawable/ic_check_normal"
        app:iconGravity="textEnd"
        android:text="@string/text_done"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>